Added <strong> and <em> tags.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <title>Lily the cat</title>
 </head>
 <body>
-  <h1>Lily the cat</h1>
-  <h2>I'm cute cat with black stripes on my grey fur</h2>
+  <h1> <strong>Lily the cat</strong></h1>
+  <h2> <em>I'm cute cat with black stripes on my grey fur</em></h2>
   <p> I like to wake up my family in the morning because I'm getting hungry.
        Sometimes my favorite person gets angry about that but there's nothing I can do because I'm a cat!</p>
   <ul> My favorite things to do :
     <li>Sleep</li>
-    <li>Eat</li>
+    <li> <a href="https://missioncats.net/blog/16-good-foods-cats-will-love.html">Eat</a></li>
     <li>Play</li>
   </ul>
 
