Added photo of cat

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1> <strong>Lily the cat</strong></h1>
-  <h2> <em>I'm cute cat with black stripes on my grey fur</em></h2>
+  <h2> <em>I'm cute cat with black stripes on my grey fur <img src="img/grey cat.jpg" alt="The cute grey cat lying down on the floor"> </em></h2>
   <p> I like to wake up my family in the morning because I'm getting hungry.
        Sometimes my favorite person gets angry about that but there's nothing I can do because I'm a cat!</p>
   <ul> My favorite things to do :
