Added link to the element Eat

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        Sometimes my favorite person gets angry about that but there's nothing I can do because I'm a cat!</p>
   <ul> My favorite things to do :
     <li>Sleep</li>
-    <li> <a href="https://missioncats.net/blog/16-good-foods-cats-will-love.html">Eat</a></li>
+    <li> <a href="https://www.missioncats.net/blog/16-good-foods-cats-will-love">Eat</a></li>
     <li>Play</li>
   </ul>
 
