--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-Us">
 <head>
+  <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
   <title>Lily the cat</title>
 </head>
 <body>
@@ -14,5 +15,5 @@
     <li>Play</li>
   </ul>
 
-  </body>
+</body>
 </html>
