--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-Us">
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Lily the cat</title>
 </head>
 <body>
+  <div class="container">
+    <h1>Dark or light</h1>
+    <p>Click a button to choose what color you'd like this page to be:</p>
+
+    <button class="btn btn-dark" id="black">Dark</button>
+    <button class="btn btn-light" id="white">Light</button>
+  </div>
   <h1> <strong>Lily the cat</strong></h1>
   <h2> <em>I'm cute cat with black stripes on my grey fur <img src="img/grey cat.jpg" alt="The cute grey cat lying down on the floor"> </em></h2>
   <p> I like to wake up my family in the morning because I'm getting hungry.
@@ -16,4 +26,4 @@
   </ul>
 
 </body>
-</html>
+</html>    
